Refactor FedSender + send mail

--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ APP_SECRET=08e92307e9df730e189fc3786850981e
 DATABASE_URL="mysql://vlad:SdCarD56@127.0.0.1:3306/test_awardwallet?serverVersion=15.1"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
